# dynamic_r2

./: .gitignore  Makefile.am  README.md  configure.ac  dynamic_r2-1.0.0.pc.in  dynamic_r2.doxyfile  environment.yaml
dynamic_r2/: bin_calculator.cc  bin_calculator.h  cargs.cc  cargs.h  main.cc  threshold_calculator.cc  threshold_calculator.h  utilities.cc  utilities.h
